src/test/resources/Parser/SyntaxErrors/WrongNumberOfTypeArguments.front
class A<T,U,V>:
    A<int32, int32> a;